# taghunter_playground

./: .env.development  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
public/default_templates/: README.md
scripts/: help.mjs
src/: App.tsx  index.css  main.tsx  mystery.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/silabser-drivers/: LICENSE.txt
src-tauri/src/: cp210x_driver.rs  hotspot.rs  lan_server.rs  lib.rs  main.rs  scenario_protocol.rs  telemetry.rs
src-tauri/src/sportident/: commands.rs  config.rs  events.rs  mod.rs  reader.rs
src-tauri/src/sportident/cards/: layout.rs  mod.rs  parser.rs
src-tauri/src/sportident/framing/: crc.rs  decoder.rs  encoder.rs  mod.rs
src-tauri/src/sportident/transport/: desktop.rs  mock.rs  mod.rs
src/components/: ApiDocsPage.tsx  CardDetectionAlert.tsx  ClientCardsPage.tsx  ConfigurationPage.tsx  DatabaseInspector.tsx  FirstBipVideoOverlay.tsx  Footer.tsx  FullscreenHint.tsx  GameDevicesModal.tsx  GameList.tsx  GameMessageOverlay.tsx  GamePage.tsx  GameTestModal.tsx  LaunchConfigModal.tsx  LaunchGameModal.tsx  LaunchedGameConfigModal.tsx  LaunchedGamesList.tsx  LeaderboardPage.tsx  LeaderboardPanel.tsx  LogoLaunchScreen.tsx  MysteryGamePage.tsx  MysteryGameRenderer.tsx  OperatorVideoOverlay.tsx  PinExitPrompt.tsx  PunchAnimationOverlay.tsx  RankingsModal.tsx  RawDataModal.tsx  RecoveryCodePrompt.tsx  ScenarioDetailsModal.tsx  ScenarioThumbnail.tsx  SelfRegisterOverlay.tsx  TagQuestGamePage.tsx  TeamDetailsModal.tsx  TeamTestModal.tsx  TimeRangeLeaderboard.tsx  TracksGamePage.tsx  TracksGameRenderer.tsx  VideoControlModal.tsx  mystery-renderer.css
src/data/: apiEndpoints.ts
src/fonts/: catalog.ts  registerCatalogFonts.ts  registerScenarioFonts.ts  resolveFontFamily.ts
src/help/: index.ts
src/hooks/: useGameStatePolling.ts
src/services/: activeSession.ts  api.ts  apiLogger.ts  apiRetry.ts  auth.ts  authStore.ts  cardsRepo.ts  cardsStore.ts  connectivity.ts  (+43 more)
(+26 files in other folders)
